--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
+    "pixi.js": "^4.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "webpack": "^2.2.1"
