1. add dev and prod mode for webpack 2. use pixi applicaton.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "godcmviewer.js",
   "scripts": {
-    "build": "webpack -d -w -p --progress --colors",
+    "build": "webpack -d -w -p --env=dev --progress --profile --colors",
+    "build:prod": "webpack --env=prod --progress --profile --colors",
     "start": "bee run",
     "init": "go get -u -v github.com/golang/dep/... && dep init && yarn install",
     "update": "go get -u -v github.com/golang/dep/... && dep ensure -update -v && yarn upgrade",
